added the result of the compilation and corrected the cross compilation commands

--- a/finder-app/makefile
+++ b/finder-app/makefile
@@ -1,33 +1,18 @@
 # Default target
 
-all: native aarch64
-
 # Native build vars
-CC = gcc
+CC = $(CROSS_COMPILE)gcc
 CFLAGS = -Wall -g
 TARGET = writer
-
-CROSS_CC = aarch64-none-linux-gnu-gcc
-CROSS_CFLAGS = -Wall -g
-CROSS_TARGET = cross_writer.elf
-
 
 # source
 SRC = writer.c
 
-native: $(TARGET)
+all: $(TARGET)
 
 $(TARGET): $(SRC)
 	$(CC) $(CFLAGS) -o $@ $^
 
-
-# cross
-aarch64: $(CROSS_TARGET)
-
-$(CROSS_TARGET): $(SRC)
-	$(CROSS_CC) $(CROSS_CFLAGS) -o $@ $^
-
-
 clean:
-	rm -f $(TARGET) $(CROSS_TARGET)
+	rm -f $(TARGET) 
 
